# menu-app

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  db-def.sql  db.py  menu.cfg_sample  menu.py  menu_scraper.py  requirements.txt  scraper_config.json  setup.py
app/: .gitignore  Containerfile  Dockerfile  Makefile  Pipfile  db-def.sql  db.py  justfile  menu.cfg_sample  menu.py  pyproject.toml  requirements.txt  requirements_docker.txt
app/templates/: index.tmpl
menu/: db.py  menu.cfg_sample  menu.py  menu_scraper.py  scraper_config.json
menu/templates/: index.tmpl
scraper/: .gitignore  Containerfile  Makefile  Pipfile  justfile  menu_scraper.py  menu_scraper_config.json_sample  pyproject.toml  scraper_config.json
templates/: index.tmpl
test/: test_menu.py
tests/: test.cfg_sample  test_menu.py
