[tool.poetry]
name = "menu-app"
version = "0.1.0"
description = "Restaurant menu display application"
authors = ["Tero Paloheimo <tero.paloheimo@iki.fi>"]
packages = [{include = "menu.py"}]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^2.2.3"
psycopg = {extras = ["binary"], version = "^3.1.9"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["B", "D", "E", "F", "G", "I", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
ignore = ["D203", "D213"]
target-version = "py312"
