[project]
name = "app"
version = "0.1.0"
description = "Application part of menu-app"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
lint.select = ["A", "B", "D", "E", "EM", "F", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
