[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Lunch restaurant menu scraping tool"
authors = ["Tero Paloheimo <tero.paloheimo@iki.fi>"]
packages = [{include = "menu_scraper.py"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
iso8601 = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["B", "D", "E", "F", "G", "I", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
target-version = "py311"
