[project]
name = "scraper"
version = "0.1.0"
description = "Lunch restaurant menu scraping script"
readme = "README.md"
authors = [
  {name = "Tero Paloheimo", email = "tero.paloheimo@iki.fi"}
]
requires-python = ">=3.14"
dependencies = [
    "iso8601>=2.1.0",
    "requests>=2.32.3",
]

[tool.ruff]
lint.select = ["A", "B", "D", "E", "EM", "F", "G", "I", "LOG", "N", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "S", "TRY", "W"]
lint.ignore = ["D203", "D213"]
